--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@electron-forge/plugin-auto-unpack-natives": "^7.6.0",
     "@electron-forge/plugin-fuses": "^7.6.0",
     "@electron-forge/plugin-vite": "^7.6.0",
+    "@electron-forge/publisher-github": "^7.6.0",
     "@electron-forge/publisher-nucleus": "^7.6.0",
     "@electron/fuses": "^1.8.0",
     "electron": "33.2.1",
